reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: .NET framework クラスで使用できる型アクセラレータについて説明します。
keywords: powershell,コマンドレット
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/13/2020
ms.locfileid: "93222464"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="dcf3b-104">型アクセラレータについて</span><span class="sxs-lookup"><span data-stu-id="dcf3b-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="dcf3b-105">短いの</span><span class="sxs-lookup"><span data-stu-id="dcf3b-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="dcf3b-106">.NET framework クラスで使用できる型アクセラレータについて説明します。</span><span class="sxs-lookup"><span data-stu-id="dcf3b-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="dcf3b-107">詳細説明</span><span class="sxs-lookup"><span data-stu-id="dcf3b-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="dcf3b-108">型アクセラレータは、.NET framework クラスのエイリアスです。</span><span class="sxs-lookup"><span data-stu-id="dcf3b-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="dcf3b-109">クラス名全体を明示的に入力しなくても、特定の .NET framework クラスにアクセスできます。</span><span class="sxs-lookup"><span data-stu-id="dcf3b-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="dcf3b-110">たとえば、 **エイリアス属性** クラスをからに短縮でき `[System.Management.Automation.AliasAttribute]` `[Alias]` ます。</span><span class="sxs-lookup"><span data-stu-id="dcf3b-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="dcf3b-111">すべての型アクセラレータは、引き続き角かっこ () で囲む必要があり `[]` ます。</span><span class="sxs-lookup"><span data-stu-id="dcf3b-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="dcf3b-112">使用可能な型アクセラレータ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="dcf3b-113">アクセラレータ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-113">Accelerator</span></span>          |                           <span data-ttu-id="dcf3b-114">完全クラス名</span><span class="sxs-lookup"><span data-stu-id="dcf3b-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="dcf3b-115">adsi</span><span class="sxs-lookup"><span data-stu-id="dcf3b-115">adsi</span></span>                         | <span data-ttu-id="dcf3b-116">System.directoryservices</span><span class="sxs-lookup"><span data-stu-id="dcf3b-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="dcf3b-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="dcf3b-117">adsisearcher</span></span>                 | <span data-ttu-id="dcf3b-118">System.directoryservices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="dcf3b-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="dcf3b-119">エイリアス</span><span class="sxs-lookup"><span data-stu-id="dcf3b-119">Alias</span></span>                        | <span data-ttu-id="dcf3b-120">System. Automation. エイリアス属性</span><span class="sxs-lookup"><span data-stu-id="dcf3b-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="dcf3b-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="dcf3b-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="dcf3b-122">システムの管理. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="dcf3b-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="dcf3b-123">AllowEmptyString</span></span>             | <span data-ttu-id="dcf3b-124">システムの管理. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="dcf3b-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="dcf3b-125">AllowNull</span></span>                    | <span data-ttu-id="dcf3b-126">システムの管理. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="dcf3b-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="dcf3b-127">ArgumentCompleter</span></span>            | <span data-ttu-id="dcf3b-128">システムの管理... 引数の属性</span><span class="sxs-lookup"><span data-stu-id="dcf3b-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="dcf3b-129">array</span><span class="sxs-lookup"><span data-stu-id="dcf3b-129">array</span></span>                        | <span data-ttu-id="dcf3b-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="dcf3b-130">System.Array</span></span>                                                        |
|<span data-ttu-id="dcf3b-131">bigint</span><span class="sxs-lookup"><span data-stu-id="dcf3b-131">bigint</span></span>                       | <span data-ttu-id="dcf3b-132">BigInteger</span><span class="sxs-lookup"><span data-stu-id="dcf3b-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="dcf3b-133">[bool]</span><span class="sxs-lookup"><span data-stu-id="dcf3b-133">bool</span></span>                         | <span data-ttu-id="dcf3b-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="dcf3b-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="dcf3b-135">byte</span><span class="sxs-lookup"><span data-stu-id="dcf3b-135">byte</span></span>                         | <span data-ttu-id="dcf3b-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="dcf3b-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="dcf3b-137">char</span><span class="sxs-lookup"><span data-stu-id="dcf3b-137">char</span></span>                         | <span data-ttu-id="dcf3b-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="dcf3b-138">System.Char</span></span>                                                         |
|<span data-ttu-id="dcf3b-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="dcf3b-139">cimclass</span></span>                     | <span data-ttu-id="dcf3b-140">CimClass (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="dcf3b-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="dcf3b-141">cimconverter</span></span>                 | <span data-ttu-id="dcf3b-142">CimConverter (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="dcf3b-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="dcf3b-143">ciminstance</span></span>                  | <span data-ttu-id="dcf3b-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="dcf3b-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="dcf3b-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="dcf3b-145">CimSession</span></span>                   | <span data-ttu-id="dcf3b-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="dcf3b-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="dcf3b-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="dcf3b-147">cimtype</span></span>                      | <span data-ttu-id="dcf3b-148">CimType (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="dcf3b-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="dcf3b-149">CmdletBinding</span></span>                | <span data-ttu-id="dcf3b-150">System.....................</span><span class="sxs-lookup"><span data-stu-id="dcf3b-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="dcf3b-151">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="dcf3b-151">cultureinfo</span></span>                  | <span data-ttu-id="dcf3b-152">システムのグローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="dcf3b-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="dcf3b-153">datetime</span><span class="sxs-lookup"><span data-stu-id="dcf3b-153">datetime</span></span>                     | <span data-ttu-id="dcf3b-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="dcf3b-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="dcf3b-155">decimal</span><span class="sxs-lookup"><span data-stu-id="dcf3b-155">decimal</span></span>                      | <span data-ttu-id="dcf3b-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="dcf3b-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="dcf3b-157">double</span><span class="sxs-lookup"><span data-stu-id="dcf3b-157">double</span></span>                       | <span data-ttu-id="dcf3b-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="dcf3b-158">System.Double</span></span>                                                       |
|<span data-ttu-id="dcf3b-159">Get-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="dcf3b-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="dcf3b-160">システムの管理. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="dcf3b-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="dcf3b-161">DscProperty</span></span>                  | <span data-ttu-id="dcf3b-162">DscPropertyAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="dcf3b-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="dcf3b-163">DscResource</span></span>                  | <span data-ttu-id="dcf3b-164">システムの管理. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="dcf3b-165">float</span><span class="sxs-lookup"><span data-stu-id="dcf3b-165">float</span></span>                        | <span data-ttu-id="dcf3b-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="dcf3b-166">System.Single</span></span>                                                       |
|<span data-ttu-id="dcf3b-167">guid</span><span class="sxs-lookup"><span data-stu-id="dcf3b-167">guid</span></span>                         | <span data-ttu-id="dcf3b-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="dcf3b-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="dcf3b-169">テーブル</span><span class="sxs-lookup"><span data-stu-id="dcf3b-169">hashtable</span></span>                    | <span data-ttu-id="dcf3b-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="dcf3b-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="dcf3b-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="dcf3b-171">initialsessionstate</span></span>          | <span data-ttu-id="dcf3b-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="dcf3b-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="dcf3b-173">int</span><span class="sxs-lookup"><span data-stu-id="dcf3b-173">int</span></span>                          | <span data-ttu-id="dcf3b-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="dcf3b-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="dcf3b-175">int16</span><span class="sxs-lookup"><span data-stu-id="dcf3b-175">int16</span></span>                        | <span data-ttu-id="dcf3b-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="dcf3b-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="dcf3b-177">int32</span><span class="sxs-lookup"><span data-stu-id="dcf3b-177">int32</span></span>                        | <span data-ttu-id="dcf3b-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="dcf3b-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="dcf3b-179">int64</span><span class="sxs-lookup"><span data-stu-id="dcf3b-179">int64</span></span>                        | <span data-ttu-id="dcf3b-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="dcf3b-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="dcf3b-181">ipaddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-181">ipaddress</span></span>                    | <span data-ttu-id="dcf3b-182">System .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="dcf3b-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="dcf3b-183">IPEndpoint</span></span>                   | <span data-ttu-id="dcf3b-184">IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="dcf3b-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="dcf3b-185">long</span><span class="sxs-lookup"><span data-stu-id="dcf3b-185">long</span></span>                         | <span data-ttu-id="dcf3b-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="dcf3b-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="dcf3b-187">mailaddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-187">mailaddress</span></span>                  | <span data-ttu-id="dcf3b-188">システム .Net. Mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="dcf3b-189">NullString</span><span class="sxs-lookup"><span data-stu-id="dcf3b-189">NullString</span></span>                   | <span data-ttu-id="dcf3b-190">System.string (...)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="dcf3b-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="dcf3b-191">ObjectSecurity</span></span>               | <span data-ttu-id="dcf3b-192">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="dcf3b-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="dcf3b-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="dcf3b-193">OutputType</span></span>                   | <span data-ttu-id="dcf3b-194">OutputTypeAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="dcf3b-195">パラメーター</span><span class="sxs-lookup"><span data-stu-id="dcf3b-195">Parameter</span></span>                    | <span data-ttu-id="dcf3b-196">System.string. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="dcf3b-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-197">PhysicalAddress</span></span>              | <span data-ttu-id="dcf3b-198">システム .Net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="dcf3b-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="dcf3b-199">powershell</span><span class="sxs-lookup"><span data-stu-id="dcf3b-199">powershell</span></span>                   | <span data-ttu-id="dcf3b-200">System. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="dcf3b-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="dcf3b-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="dcf3b-201">psaliasproperty</span></span>              | <span data-ttu-id="dcf3b-202">PSAliasProperty (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="dcf3b-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="dcf3b-203">pscredential</span></span>                 | <span data-ttu-id="dcf3b-204">システム.... PSCredential</span><span class="sxs-lookup"><span data-stu-id="dcf3b-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="dcf3b-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="dcf3b-205">pscustomobject</span></span>               | <span data-ttu-id="dcf3b-206">システム管理. PSObject</span><span class="sxs-lookup"><span data-stu-id="dcf3b-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="dcf3b-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="dcf3b-207">PSDefaultValue</span></span>               | <span data-ttu-id="dcf3b-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="dcf3b-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="dcf3b-209">pslistmodifier</span></span>               | <span data-ttu-id="dcf3b-210">PSListModifier (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="dcf3b-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="dcf3b-211">psmoduleinfo</span></span>                 | <span data-ttu-id="dcf3b-212">PSModuleInfo (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="dcf3b-213">ps注プロパティ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-213">psnoteproperty</span></span>               | <span data-ttu-id="dcf3b-214">System. Management. Ps注プロパティ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="dcf3b-215">psobject</span><span class="sxs-lookup"><span data-stu-id="dcf3b-215">psobject</span></span>                     | <span data-ttu-id="dcf3b-216">システム管理. PSObject</span><span class="sxs-lookup"><span data-stu-id="dcf3b-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="dcf3b-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="dcf3b-217">psprimitivedictionary</span></span>        | <span data-ttu-id="dcf3b-218">PSPrimitiveDictionary (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="dcf3b-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="dcf3b-219">psscriptmethod</span></span>               | <span data-ttu-id="dcf3b-220">システムの管理. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="dcf3b-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="dcf3b-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="dcf3b-221">psscriptproperty</span></span>             | <span data-ttu-id="dcf3b-222">システムの管理. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="dcf3b-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="dcf3b-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="dcf3b-224">PSTypeNameAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="dcf3b-225">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="dcf3b-225">psvariable</span></span>                   | <span data-ttu-id="dcf3b-226">システム管理. PSVariable</span><span class="sxs-lookup"><span data-stu-id="dcf3b-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="dcf3b-227">ps変数プロパティ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-227">psvariableproperty</span></span>           | <span data-ttu-id="dcf3b-228">システムの管理. Ps変数プロパティ</span><span class="sxs-lookup"><span data-stu-id="dcf3b-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="dcf3b-229">ref</span><span class="sxs-lookup"><span data-stu-id="dcf3b-229">ref</span></span>                          | <span data-ttu-id="dcf3b-230">システムの管理. PSReference</span><span class="sxs-lookup"><span data-stu-id="dcf3b-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="dcf3b-231">regex</span><span class="sxs-lookup"><span data-stu-id="dcf3b-231">regex</span></span>                        | <span data-ttu-id="dcf3b-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="dcf3b-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="dcf3b-233">実行空間</span><span class="sxs-lookup"><span data-stu-id="dcf3b-233">runspace</span></span>                     | <span data-ttu-id="dcf3b-234">システム管理. 実行空間</span><span class="sxs-lookup"><span data-stu-id="dcf3b-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="dcf3b-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="dcf3b-235">runspacefactory</span></span>              | <span data-ttu-id="dcf3b-236">RunspaceFactory (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="dcf3b-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="dcf3b-237">sbyte</span></span>                        | <span data-ttu-id="dcf3b-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="dcf3b-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="dcf3b-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="dcf3b-239">scriptblock</span></span>                  | <span data-ttu-id="dcf3b-240">システムの管理. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="dcf3b-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="dcf3b-241">securestring</span><span class="sxs-lookup"><span data-stu-id="dcf3b-241">securestring</span></span>                 | <span data-ttu-id="dcf3b-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="dcf3b-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="dcf3b-243">single</span><span class="sxs-lookup"><span data-stu-id="dcf3b-243">single</span></span>                       | <span data-ttu-id="dcf3b-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="dcf3b-244">System.Single</span></span>                                                       |
|<span data-ttu-id="dcf3b-245">string</span><span class="sxs-lookup"><span data-stu-id="dcf3b-245">string</span></span>                       | <span data-ttu-id="dcf3b-246">System.String</span><span class="sxs-lookup"><span data-stu-id="dcf3b-246">System.String</span></span>                                                       |
|<span data-ttu-id="dcf3b-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="dcf3b-247">SupportsWildcards</span></span>            | <span data-ttu-id="dcf3b-248">SupportsWildcardsAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="dcf3b-249">switch</span><span class="sxs-lookup"><span data-stu-id="dcf3b-249">switch</span></span>                       | <span data-ttu-id="dcf3b-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="dcf3b-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="dcf3b-251">TimeSpan</span><span class="sxs-lookup"><span data-stu-id="dcf3b-251">timespan</span></span>                     | <span data-ttu-id="dcf3b-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="dcf3b-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="dcf3b-253">type</span><span class="sxs-lookup"><span data-stu-id="dcf3b-253">type</span></span>                         | <span data-ttu-id="dcf3b-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="dcf3b-254">System.Type</span></span>                                                         |
|<span data-ttu-id="dcf3b-255">uint16</span><span class="sxs-lookup"><span data-stu-id="dcf3b-255">uint16</span></span>                       | <span data-ttu-id="dcf3b-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="dcf3b-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="dcf3b-257">uint32</span><span class="sxs-lookup"><span data-stu-id="dcf3b-257">uint32</span></span>                       | <span data-ttu-id="dcf3b-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="dcf3b-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="dcf3b-259">uint64</span><span class="sxs-lookup"><span data-stu-id="dcf3b-259">uint64</span></span>                       | <span data-ttu-id="dcf3b-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="dcf3b-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="dcf3b-261">uri</span><span class="sxs-lookup"><span data-stu-id="dcf3b-261">uri</span></span>                          | <span data-ttu-id="dcf3b-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="dcf3b-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="dcf3b-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="dcf3b-263">ValidateCount</span></span>                | <span data-ttu-id="dcf3b-264">System. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="dcf3b-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="dcf3b-265">ValidateDrive</span></span>                | <span data-ttu-id="dcf3b-266">System.servicemodel. Validate! 属性</span><span class="sxs-lookup"><span data-stu-id="dcf3b-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="dcf3b-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="dcf3b-267">ValidateLength</span></span>               | <span data-ttu-id="dcf3b-268">ValidateLengthAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="dcf3b-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="dcf3b-269">ValidateNotNull</span></span>              | <span data-ttu-id="dcf3b-270">System.string. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="dcf3b-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="dcf3b-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="dcf3b-272">システムの管理. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="dcf3b-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="dcf3b-273">ValidatePattern</span></span>              | <span data-ttu-id="dcf3b-274">システムの管理. Validatepattern 属性</span><span class="sxs-lookup"><span data-stu-id="dcf3b-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="dcf3b-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="dcf3b-275">ValidateRange</span></span>                | <span data-ttu-id="dcf3b-276">System. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="dcf3b-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="dcf3b-277">ValidateScript</span></span>               | <span data-ttu-id="dcf3b-278">ValidateScriptAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="dcf3b-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="dcf3b-279">ValidateSet</span></span>                  | <span data-ttu-id="dcf3b-280">ValidateSetAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="dcf3b-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="dcf3b-281">ValidateTrustedData</span></span>          | <span data-ttu-id="dcf3b-282">システムの管理. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="dcf3b-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="dcf3b-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="dcf3b-283">ValidateUserDrive</span></span>            | <span data-ttu-id="dcf3b-284">System.servicemodel. Validateuseros 属性</span><span class="sxs-lookup"><span data-stu-id="dcf3b-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="dcf3b-285">version</span><span class="sxs-lookup"><span data-stu-id="dcf3b-285">version</span></span>                      | <span data-ttu-id="dcf3b-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="dcf3b-286">System.Version</span></span>                                                      |
|<span data-ttu-id="dcf3b-287">void</span><span class="sxs-lookup"><span data-stu-id="dcf3b-287">void</span></span>                         | <span data-ttu-id="dcf3b-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="dcf3b-288">System.Void</span></span>                                                         |
|<span data-ttu-id="dcf3b-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="dcf3b-289">WildcardPattern</span></span>              | <span data-ttu-id="dcf3b-290">WildcardPattern (システム管理)</span><span class="sxs-lookup"><span data-stu-id="dcf3b-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="dcf3b-291">wmi</span><span class="sxs-lookup"><span data-stu-id="dcf3b-291">wmi</span></span>                          | <span data-ttu-id="dcf3b-292">System.management.managementobject</span><span class="sxs-lookup"><span data-stu-id="dcf3b-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="dcf3b-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="dcf3b-293">wmiclass</span></span>                     | <span data-ttu-id="dcf3b-294">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="dcf3b-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="dcf3b-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="dcf3b-295">wmisearcher</span></span>                  | <span data-ttu-id="dcf3b-296">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="dcf3b-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="dcf3b-297">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="dcf3b-297">X500DistinguishedName</span></span>        | <span data-ttu-id="dcf3b-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="dcf3b-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="dcf3b-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="dcf3b-299">X509Certificate</span></span>              | <span data-ttu-id="dcf3b-300">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="dcf3b-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="dcf3b-301">xml</span><span class="sxs-lookup"><span data-stu-id="dcf3b-301">xml</span></span>                          | <span data-ttu-id="dcf3b-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="dcf3b-302">System.Xml.XmlDocument</span></span>                                              |
