reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: .NET framework クラスで使用できる型アクセラレータについて説明します。
keywords: powershell,コマンドレット
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/13/2020
ms.locfileid: "93220963"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="06090-104">型アクセラレータについて</span><span class="sxs-lookup"><span data-stu-id="06090-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="06090-105">短いの</span><span class="sxs-lookup"><span data-stu-id="06090-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="06090-106">.NET framework クラスで使用できる型アクセラレータについて説明します。</span><span class="sxs-lookup"><span data-stu-id="06090-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="06090-107">詳細説明</span><span class="sxs-lookup"><span data-stu-id="06090-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="06090-108">型アクセラレータは、.NET framework クラスのエイリアスです。</span><span class="sxs-lookup"><span data-stu-id="06090-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="06090-109">クラス名全体を明示的に入力しなくても、特定の .NET framework クラスにアクセスできます。</span><span class="sxs-lookup"><span data-stu-id="06090-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="06090-110">たとえば、 **エイリアス属性** クラスをからに短縮でき `[System.Management.Automation.AliasAttribute]` `[Alias]` ます。</span><span class="sxs-lookup"><span data-stu-id="06090-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="06090-111">すべての型アクセラレータは、引き続き角かっこ () で囲む必要があり `[]` ます。</span><span class="sxs-lookup"><span data-stu-id="06090-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="06090-112">使用可能な型アクセラレータ</span><span class="sxs-lookup"><span data-stu-id="06090-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="06090-113">アクセラレータ</span><span class="sxs-lookup"><span data-stu-id="06090-113">Accelerator</span></span>          |                           <span data-ttu-id="06090-114">完全クラス名</span><span class="sxs-lookup"><span data-stu-id="06090-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="06090-115">adsi</span><span class="sxs-lookup"><span data-stu-id="06090-115">adsi</span></span>                         | <span data-ttu-id="06090-116">System.directoryservices</span><span class="sxs-lookup"><span data-stu-id="06090-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="06090-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="06090-117">adsisearcher</span></span>                 | <span data-ttu-id="06090-118">System.directoryservices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="06090-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="06090-119">エイリアス</span><span class="sxs-lookup"><span data-stu-id="06090-119">Alias</span></span>                        | <span data-ttu-id="06090-120">System. Automation. エイリアス属性</span><span class="sxs-lookup"><span data-stu-id="06090-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="06090-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="06090-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="06090-122">システムの管理. AllowEmptyCollectionAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="06090-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="06090-123">AllowEmptyString</span></span>             | <span data-ttu-id="06090-124">システムの管理. AllowEmptyStringAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="06090-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="06090-125">AllowNull</span></span>                    | <span data-ttu-id="06090-126">システムの管理. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="06090-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="06090-127">ArgumentCompleter</span></span>            | <span data-ttu-id="06090-128">システムの管理... 引数の属性</span><span class="sxs-lookup"><span data-stu-id="06090-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="06090-129">引数の入力候補</span><span class="sxs-lookup"><span data-stu-id="06090-129">ArgumentCompletions</span></span>          | <span data-ttu-id="06090-130">ArgumentCompletionsAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="06090-131">array</span><span class="sxs-lookup"><span data-stu-id="06090-131">array</span></span>                        | <span data-ttu-id="06090-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="06090-132">System.Array</span></span>                                                        |
|<span data-ttu-id="06090-133">bigint</span><span class="sxs-lookup"><span data-stu-id="06090-133">bigint</span></span>                       | <span data-ttu-id="06090-134">BigInteger</span><span class="sxs-lookup"><span data-stu-id="06090-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="06090-135">[bool]</span><span class="sxs-lookup"><span data-stu-id="06090-135">bool</span></span>                         | <span data-ttu-id="06090-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="06090-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="06090-137">byte</span><span class="sxs-lookup"><span data-stu-id="06090-137">byte</span></span>                         | <span data-ttu-id="06090-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="06090-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="06090-139">char</span><span class="sxs-lookup"><span data-stu-id="06090-139">char</span></span>                         | <span data-ttu-id="06090-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="06090-140">System.Char</span></span>                                                         |
|<span data-ttu-id="06090-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="06090-141">cimclass</span></span>                     | <span data-ttu-id="06090-142">CimClass (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="06090-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="06090-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="06090-143">cimconverter</span></span>                 | <span data-ttu-id="06090-144">CimConverter (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="06090-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="06090-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="06090-145">ciminstance</span></span>                  | <span data-ttu-id="06090-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="06090-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="06090-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="06090-147">CimSession</span></span>                   | <span data-ttu-id="06090-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="06090-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="06090-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="06090-149">cimtype</span></span>                      | <span data-ttu-id="06090-150">CimType (Microsoft 管理)</span><span class="sxs-lookup"><span data-stu-id="06090-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="06090-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="06090-151">CmdletBinding</span></span>                | <span data-ttu-id="06090-152">System.....................</span><span class="sxs-lookup"><span data-stu-id="06090-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="06090-153">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="06090-153">cultureinfo</span></span>                  | <span data-ttu-id="06090-154">システムのグローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="06090-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="06090-155">datetime</span><span class="sxs-lookup"><span data-stu-id="06090-155">datetime</span></span>                     | <span data-ttu-id="06090-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="06090-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="06090-157">decimal</span><span class="sxs-lookup"><span data-stu-id="06090-157">decimal</span></span>                      | <span data-ttu-id="06090-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="06090-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="06090-159">double</span><span class="sxs-lookup"><span data-stu-id="06090-159">double</span></span>                       | <span data-ttu-id="06090-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="06090-160">System.Double</span></span>                                                       |
|<span data-ttu-id="06090-161">Get-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="06090-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="06090-162">システムの管理. DscLocalConfigurationManagerAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="06090-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="06090-163">DscProperty</span></span>                  | <span data-ttu-id="06090-164">DscPropertyAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="06090-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="06090-165">DscResource</span></span>                  | <span data-ttu-id="06090-166">システムの管理. DscResourceAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="06090-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="06090-167">ExperimentAction</span></span>             | <span data-ttu-id="06090-168">ExperimentAction (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="06090-169">実験用</span><span class="sxs-lookup"><span data-stu-id="06090-169">Experimental</span></span>                 | <span data-ttu-id="06090-170">ExperimentalAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="06090-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="06090-171">ExperimentalFeature</span></span>          | <span data-ttu-id="06090-172">ExperimentalFeature (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="06090-173">float</span><span class="sxs-lookup"><span data-stu-id="06090-173">float</span></span>                        | <span data-ttu-id="06090-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="06090-174">System.Single</span></span>                                                       |
|<span data-ttu-id="06090-175">guid</span><span class="sxs-lookup"><span data-stu-id="06090-175">guid</span></span>                         | <span data-ttu-id="06090-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="06090-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="06090-177">テーブル</span><span class="sxs-lookup"><span data-stu-id="06090-177">hashtable</span></span>                    | <span data-ttu-id="06090-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="06090-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="06090-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="06090-179">initialsessionstate</span></span>          | <span data-ttu-id="06090-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="06090-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="06090-181">int</span><span class="sxs-lookup"><span data-stu-id="06090-181">int</span></span>                          | <span data-ttu-id="06090-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="06090-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="06090-183">int16</span><span class="sxs-lookup"><span data-stu-id="06090-183">int16</span></span>                        | <span data-ttu-id="06090-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="06090-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="06090-185">int32</span><span class="sxs-lookup"><span data-stu-id="06090-185">int32</span></span>                        | <span data-ttu-id="06090-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="06090-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="06090-187">int64</span><span class="sxs-lookup"><span data-stu-id="06090-187">int64</span></span>                        | <span data-ttu-id="06090-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="06090-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="06090-189">ipaddress</span><span class="sxs-lookup"><span data-stu-id="06090-189">ipaddress</span></span>                    | <span data-ttu-id="06090-190">System .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="06090-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="06090-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="06090-191">IPEndpoint</span></span>                   | <span data-ttu-id="06090-192">IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="06090-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="06090-193">long</span><span class="sxs-lookup"><span data-stu-id="06090-193">long</span></span>                         | <span data-ttu-id="06090-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="06090-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="06090-195">mailaddress</span><span class="sxs-lookup"><span data-stu-id="06090-195">mailaddress</span></span>                  | <span data-ttu-id="06090-196">システム .Net. Mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="06090-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="06090-197">NullString</span><span class="sxs-lookup"><span data-stu-id="06090-197">NullString</span></span>                   | <span data-ttu-id="06090-198">System.string (...)</span><span class="sxs-lookup"><span data-stu-id="06090-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="06090-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="06090-199">ObjectSecurity</span></span>               | <span data-ttu-id="06090-200">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="06090-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="06090-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="06090-201">OutputType</span></span>                   | <span data-ttu-id="06090-202">OutputTypeAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="06090-203">パラメーター</span><span class="sxs-lookup"><span data-stu-id="06090-203">Parameter</span></span>                    | <span data-ttu-id="06090-204">System.string. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="06090-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="06090-205">PhysicalAddress</span></span>              | <span data-ttu-id="06090-206">システム .Net. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="06090-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="06090-207">powershell</span><span class="sxs-lookup"><span data-stu-id="06090-207">powershell</span></span>                   | <span data-ttu-id="06090-208">System. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="06090-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="06090-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="06090-209">psaliasproperty</span></span>              | <span data-ttu-id="06090-210">PSAliasProperty (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="06090-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="06090-211">pscredential</span></span>                 | <span data-ttu-id="06090-212">システム.... PSCredential</span><span class="sxs-lookup"><span data-stu-id="06090-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="06090-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="06090-213">pscustomobject</span></span>               | <span data-ttu-id="06090-214">システム管理. PSObject</span><span class="sxs-lookup"><span data-stu-id="06090-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="06090-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="06090-215">PSDefaultValue</span></span>               | <span data-ttu-id="06090-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="06090-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="06090-217">pslistmodifier</span></span>               | <span data-ttu-id="06090-218">PSListModifier (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="06090-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="06090-219">psmoduleinfo</span></span>                 | <span data-ttu-id="06090-220">PSModuleInfo (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="06090-221">ps注プロパティ</span><span class="sxs-lookup"><span data-stu-id="06090-221">psnoteproperty</span></span>               | <span data-ttu-id="06090-222">System. Management. Ps注プロパティ</span><span class="sxs-lookup"><span data-stu-id="06090-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="06090-223">psobject</span><span class="sxs-lookup"><span data-stu-id="06090-223">psobject</span></span>                     | <span data-ttu-id="06090-224">システム管理. PSObject</span><span class="sxs-lookup"><span data-stu-id="06090-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="06090-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="06090-225">psprimitivedictionary</span></span>        | <span data-ttu-id="06090-226">PSPrimitiveDictionary (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="06090-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="06090-227">pspropertyexpression</span></span>         | <span data-ttu-id="06090-228">Microsoft. PowerShell. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="06090-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="06090-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="06090-229">psscriptmethod</span></span>               | <span data-ttu-id="06090-230">システムの管理. PSScriptMethod</span><span class="sxs-lookup"><span data-stu-id="06090-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="06090-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="06090-231">psscriptproperty</span></span>             | <span data-ttu-id="06090-232">システムの管理. PSScriptProperty</span><span class="sxs-lookup"><span data-stu-id="06090-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="06090-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="06090-234">PSTypeNameAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="06090-235">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="06090-235">psvariable</span></span>                   | <span data-ttu-id="06090-236">システム管理. PSVariable</span><span class="sxs-lookup"><span data-stu-id="06090-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="06090-237">ps変数プロパティ</span><span class="sxs-lookup"><span data-stu-id="06090-237">psvariableproperty</span></span>           | <span data-ttu-id="06090-238">システムの管理. Ps変数プロパティ</span><span class="sxs-lookup"><span data-stu-id="06090-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="06090-239">ref</span><span class="sxs-lookup"><span data-stu-id="06090-239">ref</span></span>                          | <span data-ttu-id="06090-240">システムの管理. PSReference</span><span class="sxs-lookup"><span data-stu-id="06090-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="06090-241">regex</span><span class="sxs-lookup"><span data-stu-id="06090-241">regex</span></span>                        | <span data-ttu-id="06090-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="06090-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="06090-243">実行空間</span><span class="sxs-lookup"><span data-stu-id="06090-243">runspace</span></span>                     | <span data-ttu-id="06090-244">システム管理. 実行空間</span><span class="sxs-lookup"><span data-stu-id="06090-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="06090-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="06090-245">runspacefactory</span></span>              | <span data-ttu-id="06090-246">RunspaceFactory (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="06090-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="06090-247">sbyte</span></span>                        | <span data-ttu-id="06090-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="06090-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="06090-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="06090-249">scriptblock</span></span>                  | <span data-ttu-id="06090-250">システムの管理. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="06090-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="06090-251">securestring</span><span class="sxs-lookup"><span data-stu-id="06090-251">securestring</span></span>                 | <span data-ttu-id="06090-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="06090-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="06090-253">semver</span><span class="sxs-lookup"><span data-stu-id="06090-253">semver</span></span>                       | <span data-ttu-id="06090-254">SemanticVersion (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="06090-255">short</span><span class="sxs-lookup"><span data-stu-id="06090-255">short</span></span>                        | <span data-ttu-id="06090-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="06090-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="06090-257">single</span><span class="sxs-lookup"><span data-stu-id="06090-257">single</span></span>                       | <span data-ttu-id="06090-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="06090-258">System.Single</span></span>                                                       |
|<span data-ttu-id="06090-259">string</span><span class="sxs-lookup"><span data-stu-id="06090-259">string</span></span>                       | <span data-ttu-id="06090-260">System.String</span><span class="sxs-lookup"><span data-stu-id="06090-260">System.String</span></span>                                                       |
|<span data-ttu-id="06090-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="06090-261">SupportsWildcards</span></span>            | <span data-ttu-id="06090-262">SupportsWildcardsAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="06090-263">switch</span><span class="sxs-lookup"><span data-stu-id="06090-263">switch</span></span>                       | <span data-ttu-id="06090-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="06090-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="06090-265">TimeSpan</span><span class="sxs-lookup"><span data-stu-id="06090-265">timespan</span></span>                     | <span data-ttu-id="06090-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="06090-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="06090-267">type</span><span class="sxs-lookup"><span data-stu-id="06090-267">type</span></span>                         | <span data-ttu-id="06090-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="06090-268">System.Type</span></span>                                                         |
|<span data-ttu-id="06090-269">uint</span><span class="sxs-lookup"><span data-stu-id="06090-269">uint</span></span>                         | <span data-ttu-id="06090-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="06090-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="06090-271">uint16</span><span class="sxs-lookup"><span data-stu-id="06090-271">uint16</span></span>                       | <span data-ttu-id="06090-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="06090-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="06090-273">uint32</span><span class="sxs-lookup"><span data-stu-id="06090-273">uint32</span></span>                       | <span data-ttu-id="06090-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="06090-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="06090-275">uint64</span><span class="sxs-lookup"><span data-stu-id="06090-275">uint64</span></span>                       | <span data-ttu-id="06090-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="06090-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="06090-277">ulong</span><span class="sxs-lookup"><span data-stu-id="06090-277">ulong</span></span>                        | <span data-ttu-id="06090-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="06090-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="06090-279">uri</span><span class="sxs-lookup"><span data-stu-id="06090-279">uri</span></span>                          | <span data-ttu-id="06090-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="06090-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="06090-281">ushort</span><span class="sxs-lookup"><span data-stu-id="06090-281">ushort</span></span>                       | <span data-ttu-id="06090-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="06090-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="06090-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="06090-283">ValidateCount</span></span>                | <span data-ttu-id="06090-284">System. Automation. ValidateCountAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="06090-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="06090-285">ValidateDrive</span></span>                | <span data-ttu-id="06090-286">System.servicemodel. Validate! 属性</span><span class="sxs-lookup"><span data-stu-id="06090-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="06090-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="06090-287">ValidateLength</span></span>               | <span data-ttu-id="06090-288">ValidateLengthAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="06090-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="06090-289">ValidateNotNull</span></span>              | <span data-ttu-id="06090-290">System.string. ValidateNotNullAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="06090-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="06090-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="06090-292">システムの管理. ValidateNotNullOrEmptyAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="06090-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="06090-293">ValidatePattern</span></span>              | <span data-ttu-id="06090-294">システムの管理. Validatepattern 属性</span><span class="sxs-lookup"><span data-stu-id="06090-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="06090-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="06090-295">ValidateRange</span></span>                | <span data-ttu-id="06090-296">System. Automation. ValidateRangeAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="06090-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="06090-297">ValidateScript</span></span>               | <span data-ttu-id="06090-298">ValidateScriptAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="06090-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="06090-299">ValidateSet</span></span>                  | <span data-ttu-id="06090-300">ValidateSetAttribute (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="06090-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="06090-301">ValidateTrustedData</span></span>          | <span data-ttu-id="06090-302">システムの管理. ValidateTrustedDataAttribute</span><span class="sxs-lookup"><span data-stu-id="06090-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="06090-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="06090-303">ValidateUserDrive</span></span>            | <span data-ttu-id="06090-304">System.servicemodel. Validateuseros 属性</span><span class="sxs-lookup"><span data-stu-id="06090-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="06090-305">version</span><span class="sxs-lookup"><span data-stu-id="06090-305">version</span></span>                      | <span data-ttu-id="06090-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="06090-306">System.Version</span></span>                                                      |
|<span data-ttu-id="06090-307">void</span><span class="sxs-lookup"><span data-stu-id="06090-307">void</span></span>                         | <span data-ttu-id="06090-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="06090-308">System.Void</span></span>                                                         |
|<span data-ttu-id="06090-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="06090-309">WildcardPattern</span></span>              | <span data-ttu-id="06090-310">WildcardPattern (システム管理)</span><span class="sxs-lookup"><span data-stu-id="06090-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="06090-311">wmi</span><span class="sxs-lookup"><span data-stu-id="06090-311">wmi</span></span>                          | <span data-ttu-id="06090-312">System.management.managementobject</span><span class="sxs-lookup"><span data-stu-id="06090-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="06090-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="06090-313">wmiclass</span></span>                     | <span data-ttu-id="06090-314">ManagementClass</span><span class="sxs-lookup"><span data-stu-id="06090-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="06090-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="06090-315">wmisearcher</span></span>                  | <span data-ttu-id="06090-316">ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="06090-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="06090-317">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="06090-317">X500DistinguishedName</span></span>        | <span data-ttu-id="06090-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="06090-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="06090-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="06090-319">X509Certificate</span></span>              | <span data-ttu-id="06090-320">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="06090-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="06090-321">xml</span><span class="sxs-lookup"><span data-stu-id="06090-321">xml</span></span>                          | <span data-ttu-id="06090-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="06090-322">System.Xml.XmlDocument</span></span>                                              |
